<resources>
    <string name="app_name">Professional Buddies</string>
    <string name="googleLogin">Login with Google</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loginButton">Login</string>
    <string name="recoverAccount">Forgot Username/Password?</string>
    <string name="newUser">New User? Sign up!</string>
    <string name="Accountrecovery">Account Recovery</string>
    <string name="securityQuestion">Security Question</string>
    <string name="enterBirthday">Birthday</string>
    <string name="enterName"> Name </string>
    <string name="email">Email</string>
    <string name="securityQuestionAnswer">Answer</string>
    <string name="motherMaiden">What is your mother\'s maiden name?</string>
    <string name="elementarySchool">What was the name of your elementary school?</string>
    <string name="childhoodFriend">Who was your childhood best friend?</string>
    <string name="enterEmail">Enter Email</string>
    <string-array name="questionsArray">
        <item>@string/motherMaiden</item>
        <item>@string/elementarySchool</item>
        <item>@string/childhoodFriend</item>
    </string-array>
</resources>
