<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.danie.professionalbuddies.MainActivity">

    <EditText
        android:id="@+id/userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="110dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColorLink="@android:color/holo_blue_bright"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded"
        android:layout_marginRight="96dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/userNameDescription"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="0dp"
        android:text="@string/username"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColorLink="@android:color/holo_blue_bright"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameDescription"
        tools:ignore="RtlHardcoded"
        android:layout_marginRight="96dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.509" />

    <TextView
        android:id="@+id/passwordDescription"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="0dp"
        android:text="@string/password"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="86dp"
        android:layout_height="38dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="1dp"
        android:elevation="0dp"
        android:onClick="login"
        android:text="@string/loginButton"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        app:layout_constraintHorizontal_bias="0.715"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/googleLogin"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginTop="10dp"
        android:onClick="googleLogin"
        android:text="@string/googleLogin"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="newUser"
        android:text="@string/newUser"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/googleLogin"
        app:layout_constraintVertical_bias="0.75"
        android:layout_marginLeft="96dp"
        android:layout_marginRight="96dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="219dp"
        android:layout_height="0dp"
        android:layout_marginBottom="56dp"
        android:layout_marginLeft="96dp"
        android:layout_marginRight="96dp"
        android:onClick="accountRecovery"
        android:text="@string/recoverAccount"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
